--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,11 +7,11 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Experience
-    url: '#experience'
-    weight: 20
   - name: Publications
     url: '#featured'
+    weight: 20
+  - name: Timeline
+    url: '#timeline'
     weight: 30
   - name: CV
     url: uploads/resume.pdf
