--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -39,7 +39,7 @@ header:
     show_logo: true
     show_language: false
     show_day_night: true
-    show_search: true
+    show_search: false
     highlight_active_link: true
 
 # Site footer
@@ -89,13 +89,13 @@ features:
       repo_id: ''
       category: ''
       category_id: ''
-#  search:
-#    provider: wowchemy
-#    algolia:
-#      app_id: ''
-#      api_key: ''
-#      index_name: ''
-#      show_logo: false
+  search:
+    provider: wowchemy
+    algolia:
+      app_id: ''
+      api_key: ''
+      index_name: ''
+      show_logo: false
   map:
     provider: 'mapnik'
     api_key: ''
