--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -19,7 +19,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'Alejandro García Castellanos's personal website.'
+    description: "Alejandro García Castellanos's personal website."
     twitter: 'GetResearchDev'
   analytics:
     google_analytics: ''
