--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,7 +20,7 @@ marketing:
     local_business_type: ''
     org_name: ''
     description: "Alejandro García Castellanos's personal website."
-    twitter: 'GetResearchDev'
+    twitter: 'algarciacast'
   analytics:
     google_analytics: ''
     baidu_tongji: ''
